--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 img {
-    height: 150px;
-    width: 200px;
+    height: 100px;
+    width: 300px;
     padding: 20;
     border: 0;
+}
+
+.header-top {
+    background-color: darkblue;
 }
