add background header

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ img {
     border: 0;
 }
 
-.header-top {
-    background-color: darkblue;
+#header {
+    background: url('/images/leavesfall.jpg') no-repeat 
+
 }
