--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ img {
     border: 0;
 }
 
-#header {
-    background: url('/images/leavesfall.jpg') no-repeat 
+body div.header {
+    background: url('images/leavesfall.jpg') no-repeat; 
 
 }
